--- a/google-homepage.html
+++ b/google-homepage.html
@@ -3,20 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="google-homepage.css">
+    <title>Google Homepage Project</title>
 </head>
 <body>
     <nav>
+        <div class="myAccount"><a href="#">G</a></div>
+        <div class="googleApps"><a href="#"></a></div>
         <ul>
-            <li><a href="#">Gmail</a></li>
             <li><a href="#">Images</a></li>
-            <li><a href="#"></a></li>
-            <li><a href="#"></a></li>
+            <li><a href="#">Gmail</a></li>
         </ul>
     </nav>
 
     <div class="main">
-        <img alt="Google Logo"  src="">
+        <img alt="Google Logo" id="logo" src="google_logo.svg"> <!--h 92 w 272 -->
         <input type="search" placeholder="Search...">
         <input type="submit" value="Google Search">
         <input type="submit" value="I'm Feeling Lucky">
@@ -28,16 +29,16 @@
     </div>
     <footer>
         <ul class="left-float-footer">
-            <li><a>Advertising</a></li>
-            <li><a>Business</a></li>
-            <li><a>About</a></li>
-            <li><a>How Search works</a></li>
+            <li><a href="#">Advertising</a></li>
+            <li><a href="#">Business</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">How Search works</a></li>
         </ul>
 
         <ul class="right-float-footer">
-            <li><a>Privacy</a></li>
-            <li><a>Terms</a></li>
-            <li><a>Settings</a></li>
+            <li><a href="#">Privacy</a></li>
+            <li><a href="#">Terms</a></li>
+            <li><a href="#">Settings</a></li>
         </ul>
     </footer>
 </body>
