Add basic css styles to the rest of the html

--- a/google-homepage.html
+++ b/google-homepage.html
@@ -17,14 +17,16 @@
     </nav>
 
     <div class="main">
-        <img alt="Google Logo" id="logo" src="google_logo.svg"> <!--h 92 w 272 -->
+        <img alt="Google Logo" id="logo" src="google_logo.svg">
         <input type="search" placeholder="Search...">
+        <div class="inputButtons">
         <input type="submit" value="Google Search">
         <input type="submit" value="I'm Feeling Lucky">
-        <p>Google offered in: <a href ="#">Bangla</a> </p>
+        </div>
+        <p>Google offered in: <a href ="#">বাংলা</a> </p>
     </div>
 
-    <div class ="Location">
+    <div class ="location">
         <h3>Bangladesh</h3>
     </div>
     <footer>
@@ -36,9 +38,9 @@
         </ul>
 
         <ul class="right-float-footer">
-            <li><a href="#">Privacy</a></li>
-            <li><a href="#">Terms</a></li>
             <li><a href="#">Settings</a></li>
+            <li><a href="#">Terms</a></li>
+            <li><a href="#">Privacy</a></li>
         </ul>
     </footer>
 </body>
