Add flex-containers to location and footer, modify nav bar, margin main div

--- a/google-homepage.html
+++ b/google-homepage.html
@@ -8,9 +8,8 @@
 </head>
 <body>
     <nav>
-        <div class="myAccount"><a href="#">G</a></div>
-        <div class="googleApps"><a href="#"></a></div>
         <ul>
+            <li><a>Sign in</a></li>
             <li><a href="#">Images</a></li>
             <li><a href="#">Gmail</a></li>
         </ul>
@@ -26,8 +25,10 @@
         <p>Google offered in: <a href ="#">বাংলা</a> </p>
     </div>
 
-    <div class ="location">
-        <h3>Bangladesh</h3>
+    <div class="flex-container">
+
+    <div class="location">
+        <h4>Bangladesh</h4>
     </div>
     <footer>
         <ul class="left-float-footer">
@@ -43,5 +44,7 @@
             <li><a href="#">Privacy</a></li>
         </ul>
     </footer>
+
+    </div>
 </body>
 </html>
