--- a/google-homepage.html
+++ b/google-homepage.html
@@ -8,8 +8,9 @@
 </head>
 <body>
     <nav>
+        <div class="myAccount"><a href="#"></a></div>
+        <div class="googleApps"><a href="#"></a></div>
         <ul>
-            <li><a>Sign in</a></li>
             <li><a href="#">Images</a></li>
             <li><a href="#">Gmail</a></li>
         </ul>
@@ -28,7 +29,7 @@
     <div class="flex-container">
 
     <div class="location">
-        <h4>Bangladesh</h4>
+        <span>Bangladesh</span>
     </div>
     <footer>
         <ul class="left-float-footer">
