Final Revision: remove flex-container, improve styling

--- a/google-homepage.html
+++ b/google-homepage.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <nav>
-        <div class="myAccount"><a href="#"></a></div>
-        <div class="googleApps"><a href="#"></a></div>
+        <div class="myAccount"></div>
+        <div class="googleApps"></div>
         <ul>
             <li><a href="#">Images</a></li>
             <li><a href="#">Gmail</a></li>
@@ -25,8 +25,6 @@
         </div>
         <p>Google offered in: <a href ="#">বাংলা</a> </p>
     </div>
-
-    <div class="flex-container">
 
     <div class="location">
         <span>Bangladesh</span>
@@ -46,6 +44,5 @@
         </ul>
     </footer>
 
-    </div>
 </body>
 </html>
